--- a/site/home.html
+++ b/site/home.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <!--jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+    <script src="../assets/js/jquery.min.js" type="text/javascript"></script>
     <!--
       Nivo Slider
       http://docs.dev7studios.com/jquery-plugins/nivo-slider
