* Fix image path

--- a/site/404.html
+++ b/site/404.html
@@ -7,7 +7,7 @@
     <style type="text/css">
       #four_oh_four:before {
 	    /* Image location for the 404 image */
-	    content: url('../images/404.png');
+	    content: url('../assets/images/404.png');
       }
       .four_oh_four {
 	    /* Set font size of the "go back/home" text */
