--- a/site/home.html
+++ b/site/home.html
@@ -29,7 +29,13 @@
       <!--Header (Logo) and Navigation Bar-->
       <div id="header">
         <header class="header headergradient">
-          <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
+          <div id="database">
+            <a href="../Broken Hill Surf Shop Database.accdb">
+              <img src="../assets/images/accessdb.png"/>
+              <p>Database</p>
+            </a>
+          </div>
+          <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> <a href="" style="position: absolute; padding-left: 10px; top: 10px;">Shopping Cart ()</a>
           <!--START Navigation Bar-->
           <div id="navigation-bar">
             <ul>
