* Header shopping cart

--- a/site/home.html
+++ b/site/home.html
@@ -32,10 +32,11 @@
           <div id="database">
             <a href="../Broken Hill Surf Shop Database.accdb">
               <img src="../assets/images/accessdb.png"/>
-              <p>Database</p>
+              <p class="nomargin">Database</p>
             </a>
           </div>
-          <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> <a href="" style="position: absolute; padding-left: 10px; top: 10px;">Shopping Cart ()</a>
+          <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a>
+          <div id="hcart"><a href="">Shopping Cart (<span id="cart_count">0</span>)</a></div>
           <!--START Navigation Bar-->
           <div id="navigation-bar">
             <ul>
