--- a/site/news.html
+++ b/site/news.html
@@ -5,8 +5,10 @@
     <title>Broken Hill Surf Shop Online</title>
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <script src="../assets/js/util.js"></script>
+    <script src="../assets/js/cart.js"></script>
   </head>
-  <body>
+  <body onload="showDocument();">
     <div id="container">
       <div id="header">
         <header class="header headergradient">
