--- a/site/products.html
+++ b/site/products.html
@@ -1,116 +1,115 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Broken Hill Surf Shop Online</title>
-    <link rel="shortcut icon" href="../assets/images/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/products.css">
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/cart.js"></script>
-    <script src="../assets/js/page_products.js"></script>
-    <script src="../assets/js/product.js"></script>
-    <script src="../assets/js/jquery.min.js" type="text/javascript"></script>
-    <script src="../assets/js/jquery.barcode.min.js"></script>
-    <script>
-      var hasargs;
-      var productready = false;
-      var productinfo;
-      var parameters = window.location.toString();
-      beginLoad();
-      if (hasargs) {
-        loadProduct(parameters[0]);
-      }
-    </script>
-  </head>
-  <body onLoad="finishLoad();">
-    <div id="container">
-      <!-- --> 
-      <!--Header (Logo) and Navigation Bar-->
-      <div id="cheader">
-        <div class="header">
-          <div class="headergradient">
-            <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
-            <!--START Navigation Bar-->
-            <div id="navigation-bar">
-              <ul>
-                <li><a href="home.html">Home</a> </li>
-                <li class="active"><a href="products.html">Products</a> </li>
-                <li><a href="about.html">About</a> </li>
-                <li><a href="contact.html">Contact</a> </li>
-                <li class="last"><a href="news.html">News</a> </li>
-              </ul>
-            </div>
-          </div>
-          <!--END Navigation Bar--> 
-          <!--START Product Navigation Bar-->
-          <div id="product-navigation-bar">
-            <ul>
-              <li id="product_category_surfing"><a href="surfing">Surfing</a> </li>
-              <li id="product_category_clothing"><a href="clothing">Clothing</a> </li>
-              <li id="product_category_protection"><a href="protection">Protection</a> </li>
-              <li id="product_category_scubasnorkeling_gear"><a href="scubasnorkelinggear">Scuba/Snorkeling Gear</a> </li>
-              <li id="product_category_recreation"><a href="recreation">Recreation</a> </li>
-              <li id="product_category_accessories" class="last"><a href="accessories">Accessories</a> </li>
-            </ul>
-          </div>
-          <!--END Product Navigation Bar--> 
-        </div>
-      </div>
-      <div id="ccontent">
-        <div id="product_location"></div>
-        <div id="products">
-          <div class="productimage"> <img id="productimage"> </div>
-          <div class="producttext">
-            <div class="productinfo_upper">
-              <!--Wrapper -->
-              <div id="productname"></div>
-              <div id="productcode" class="borderbottom borderc"></div>
-              <div id="productdatabaseinfo_price"></div>
-              <div id="productdatabaseinfo_availability"></div>
-            </div>
-            <div class="productinfo_lower">
-              <div id="productdescription" class="borderbottom borderc"></div>
-              <div id="productbarcode_wrapper">
-                <div id="productbarcode_wrapper_subwrapper" class="nomargin">
-                  <div id="productbarcode"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="footer_wrapper" class="footergradient nomargin">
-        <div id="footer" class="nomargin">
-          <!--SITEMAP-->
-          <div id="infocolumns" class="borderbottom">
-            <div>
-              <h1>site</h1>
-              <p><a href="home.html">home</a> </p>
-              <p><a href="products.html">products</a> </p>
-              <p><a href="about.html">about</a> </p>
-              <p><a href="contact.html">contact</a> </p>
-              <p><a href="news.html">news</a> </p>
-            </div>
-            <div>
-              <h1>products</h1>
-              <p><a href="surfing">surfing</a> </p>
-              <p><a href="clothing">clothing</a> </p>
-              <p><a href="protection">protection</a> </p>
-              <p><a href="scubasnorkelinggear">scuba/snorkeling gear</a> </p>
-              <p><a href="recreation">recreation</a> </p>
-              <p><a href="accessories">accessories</a> </p>
-            </div>
-            <div>
-              <h1>contact</h1>
-              <p>email: contact@brokenhillsurf.com.au</p>
-              <p>facebook: brokenhillsurfshop</p>
-              <p>twitter: @brokenhillsurfshop</p>
-            </div>
-          </div>
-        </div>
-        <p>&copy; 2014 Andrew Wong & Ryan Oo</p>
-      </div>
-    </div>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>Broken Hill Surf Shop Online</title>
+		<link rel="shortcut icon" href="../assets/images/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="../assets/css/products.css">
+		<script src="../assets/js/util.js"></script>
+		<script src="../assets/js/cart.js"></script>
+		<script src="../assets/js/page_products.js"></script>
+		<script src="../assets/js/product.js"></script>
+		<script src="../assets/js/jquery.min.js" type="text/javascript"></script>
+		<script src="../assets/js/jquery.barcode.min.js"></script>
+		<script>
+			var parameters = window.location.toString();
+			beginLoad();
+			if (hasargs) {
+			  loadProduct(parameters[0]);
+			}
+		</script>
+	</head>
+	<body onLoad="finishLoad();">
+		<div id="container">
+			<!-- --> 
+			<!--Header (Logo) and Navigation Bar-->
+			<div id="cheader">
+				<div class="header">
+					<div class="headergradient">
+						<a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
+						<div id="hcart"><a href="">Shopping Cart (<span id="cart_count">0</span>)</a></div>
+						<script type="text/javascript">cart.updateCartCount(true);</script> 
+						<!--START Navigation Bar-->
+						<div id="navigation-bar">
+							<ul>
+								<li><a href="home.html">Home</a> </li>
+								<li class="active"><a href="products.html">Products</a> </li>
+								<li><a href="about.html">About</a> </li>
+								<li><a href="contact.html">Contact</a> </li>
+								<li class="last"><a href="news.html">News</a> </li>
+							</ul>
+						</div>
+					</div>
+					<!--END Navigation Bar--> 
+					<!--START Product Navigation Bar-->
+					<div id="product-navigation-bar">
+						<ul>
+							<li id="product_category_surfing"><a href="surfing">Surfing</a> </li>
+							<li id="product_category_clothing"><a href="clothing">Clothing</a> </li>
+							<li id="product_category_protection"><a href="protection">Protection</a> </li>
+							<li id="product_category_scubasnorkeling_gear"><a href="scubasnorkelinggear">Scuba/Snorkeling Gear</a> </li>
+							<li id="product_category_recreation"><a href="recreation">Recreation</a> </li>
+							<li id="product_category_accessories" class="last"><a href="accessories">Accessories</a> </li>
+						</ul>
+					</div>
+					<!--END Product Navigation Bar--> 
+				</div>
+			</div>
+			<div id="ccontent">
+				<div id="product_location"></div>
+				<div id="products">
+					<div class="productimage"> <img id="productimage"> </div>
+					<div class="producttext">
+						<div class="productinfo_upper">
+							<!--Wrapper -->
+							<div id="productname"></div>
+							<div id="productcode" class="borderbottom borderc"></div>
+							<div id="productdatabaseinfo_price"></div>
+							<div id="productdatabaseinfo_availability"></div>
+						</div>
+						<div class="productinfo_lower">
+							<div id="productdescription" class="borderbottom borderc"></div>
+							<div id="productbarcode_wrapper">
+								<div id="productbarcode_wrapper_subwrapper" class="nomargin">
+									<div id="productbarcode"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="footer_wrapper" class="footergradient nomargin">
+				<div id="footer" class="nomargin">
+					<!--SITEMAP-->
+					<div id="infocolumns" class="borderbottom">
+						<div>
+							<h1>site</h1>
+							<p><a href="home.html">home</a> </p>
+							<p><a href="products.html">products</a> </p>
+							<p><a href="about.html">about</a> </p>
+							<p><a href="contact.html">contact</a> </p>
+							<p><a href="news.html">news</a> </p>
+						</div>
+						<div>
+							<h1>products</h1>
+							<p><a href="surfing">surfing</a> </p>
+							<p><a href="clothing">clothing</a> </p>
+							<p><a href="protection">protection</a> </p>
+							<p><a href="scubasnorkelinggear">scuba/snorkeling gear</a> </p>
+							<p><a href="recreation">recreation</a> </p>
+							<p><a href="accessories">accessories</a> </p>
+						</div>
+						<div>
+							<h1>contact</h1>
+							<p>email: contact@brokenhillsurf.com.au</p>
+							<p>facebook: brokenhillsurfshop</p>
+							<p>twitter: @brokenhillsurfshop</p>
+						</div>
+					</div>
+				</div>
+				<p>&copy; 2014 Andrew Wong & Ryan Oo</p>
+			</div>
+		</div>
+	</body>
 </html>
