--- a/site/home.html
+++ b/site/home.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/home.css">
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/cart.js"></script>
+    <script src="../assets/js/util.js" type="text/javascript"></script>
+    <script src="../assets/js/cart.js" type="text/javascript"></script>
     <!--jQuery -->
     <script src="../assets/js/jquery.min.js" type="text/javascript"></script>
     <!--
@@ -39,7 +39,7 @@
             </a>
           </div>
           <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a>
-          <div id="hcart"><a href="">Shopping Cart (<span id="cart_count">0</span>)</a></div>
+          <div id="hcart"><a href="cart.html">Shopping Cart (<span id="cart_count">0</span>)</a></div>
           <script type="text/javascript">cart.updateCartCount(true);</script>
           <!--START Navigation Bar-->
           <div id="navigation-bar">
@@ -113,39 +113,39 @@
         </div>
       </div>
       <br>
-      <br> <!-- Personally I hate line breaks, but given the time I had to make this (aka, being out of my house for 80% of the duration of the holidays, and doing my history assignment in week 1 term 3 - Andrwe -->
+      <br> <!-- Personally I hate line breaks, but given the time I had to make this (aka, being out of my house for 80% of the duration of the holidays, and doing my history assignment in week 1 term 3 - Andrew -->
       <br>
-      <div id="footer_wrapper" class="footergradient nomargin">
-        <div id="footer" class="nomargin">
-          <!--SITEMAP-->
-          <div id="infocolumns" class="borderbottom">
-            <div>
-              <h1>site</h1>
-              <p><a href="home.html">home</a> </p>
-              <p><a href="products.html">products</a> </p>
-              <p><a href="about.html">about</a> </p>
-              <p><a href="contact.html">contact</a> </p>
-              <p><a href="news.html">news</a> </p>
-            </div>
-            <div>
-              <h1>products</h1>
-              <p><a href="surfing">surfing</a> </p>
-              <p><a href="clothing">clothing</a> </p>
-              <p><a href="protection">protection</a> </p>
-              <p><a href="scubasnorkelinggear">scuba/snorkeling gear</a> </p>
-              <p><a href="recreation">recreation</a> </p>
-              <p><a href="accessories">accessories</a> </p>
-            </div>
-            <div>
-              <h1>contact</h1>
-              <p>email: contact@brokenhillsurf.com.au</p>
-              <p>facebook: brokenhillsurfshop</p>
-              <p>twitter: @brokenhillsurfshop</p>
-            </div>
-          </div>
-        </div>
-        <p>&copy; 2014 Andrew Wong & Ryan Oo</p>
-      </div>
-    </div>
-  </body>
-</html>
+			<div id="footer_wrapper" class="footergradient nomargin"> <!-- Footer wrapper (Whole page width) -->
+				<div id="footer" class="nomargin"> <!-- Footer (900px page center) -->
+<!-- SITEMAP -->
+					<div id="infocolumns" class="borderbottom"> <!-- Info columns & because I don't like lists -->
+						<div> <!-- Column 1 - Sites -->
+							<h1>site</h1> <!-- Header -->
+							<p><a href="home.html">home</a> </p> <!-- Link to home page -->
+							<p><a href="products.html">products</a> </p> <!-- Link to products page -->
+							<p><a href="about.html">about</a> </p> <!-- Link to about page -->
+							<p><a href="contact.html">contact</a> </p> <!-- Link to contact page -->
+							<p><a href="news.html">news</a> </p> <!-- Link to news page -->
+						</div> <!-- Close column 1 -->
+						<div> <!-- Column 2 - Product Categories -->
+							<h1>products</h1> <!-- Header -->
+							<p><a href="surfing">surfing</a> </p> <!-- Link to surfing products -->
+							<p><a href="clothing">clothing</a> </p> <!-- Link to clothing products -->
+							<p><a href="protection">protection</a> </p> <!-- Link to protective products -->
+							<p><a href="scubasnorkelinggear">scuba/snorkeling gear</a> </p> <!-- Link to scuba and snorkeling gear -->
+							<p><a href="recreation">recreation</a> </p> <!-- Link to recreational gear -->
+							<p><a href="accessories">accessories</a> </p> <!-- Link to accessories -->
+						</div> <!-- Close column 2 -->
+						<div> <!-- Column 3 - Contact details -->
+							<h1>contact</h1> <!-- Header -->
+							<p>email: contact@brokenhillsurf.com.au</p> <!-- Email address - nonexistent -->
+							<p>facebook: brokenhillsurfshop</p> <!-- Facebook page name - nonexistent -->
+							<p>twitter: @brokenhillsurfshop</p> <!-- Twitter handle - nonexistent -->
+						</div> <!-- Close column 3 -->
+					</div> <!-- Close info columns -->
+				</div> <!-- Close footer -->
+				<p>&copy; 2014 Andrew Wong & Ryan Oo</p> <!-- Copyright -->
+			</div> <!-- Close footer wrapper -->
+		</div> <!-- Close wrapper div -->
+	</body> <!-- Close BODY tag -->
+</html> <!-- Close HTML tag -->
