--- a/site/cart.html
+++ b/site/cart.html
@@ -6,10 +6,9 @@
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/cart.css">
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/cart.js"></script>
-    <script src="../assets/js/product.js"></script>
-    <script src="../assets/js/page_cart.js"></script>
+    <script src="../assets/js/util.js" type="text/javascript"></script>
+    <script src="../assets/js/cart.js" type="text/javascript"></script>
+    <script src="../assets/js/page_cart.js" type="text/javascript"></script>
     <script src="../assets/js/jquery.min.js" type="text/javascript"></script>
     <script>beginLoad();</script>
   </head>
@@ -32,43 +31,47 @@
         </header>
       </div>
       <div id="ccontent">
-      <table align="center" border=1>
-        <!-- Second column houses the product image -->
-        <tr bgcolor=white><th>Code</th><th>Image</th><th>Product Name</th><th>Product Description</th><th>Quantity</th><th>Price</th></tr>
+      	<table id="cart">
+        	<tr><th>Code</th><th>Image</th><th>Product Name</th><th>Product Description</th><th>Quantity</th><th>Price</th><th>Subtotal</th></tr> <!-- Second column houses the product image -->
         <script>createTable();</script>
       </table>
+      <p id="totalprice"></p>
+      <div id="checkout_navigation">
+<!--  a href=""><span>Back</span></a> -->
+      <a href=""><span>Next</span></a>
       </div>
-      <div id="footer_wrapper" class="footergradient nomargin">
-        <div id="footer" class="nomargin">
-          <!--SITEMAP-->
-          <div id="infocolumns" class="borderbottom">
-            <div>
-              <h1>site</h1>
-              <p><a href="home.html">home</a> </p>
-              <p><a href="products.html">products</a> </p>
-              <p><a href="about.html">about</a> </p>
-              <p><a href="contact.html">contact</a> </p>
-              <p><a href="news.html">news</a> </p>
-            </div>
-            <div>
-              <h1>products</h1>
-              <p><a href="surfing">surfing</a> </p>
-              <p><a href="clothing">clothing</a> </p>
-              <p><a href="protection">protection</a> </p>
-              <p><a href="scubasnorkelinggear">scuba/snorkeling gear</a> </p>
-              <p><a href="recreation">recreation</a> </p>
-              <p><a href="accessories">accessories</a> </p>
-            </div>
-            <div>
-              <h1>contact</h1>
-              <p>email: contact@brokenhillsurf.com.au</p>
-              <p>facebook: brokenhillsurfshop</p>
-              <p>twitter: @brokenhillsurfshop</p>
-            </div>
-          </div>
-        </div>
-        <p>&copy; 2014 Andrew Wong & Ryan Oo</p>
       </div>
-    </div>
-  </body>
-</html>
+			<div id="footer_wrapper" class="footergradient nomargin"> <!-- Footer wrapper (Whole page width) -->
+				<div id="footer" class="nomargin"> <!-- Footer (900px page center) -->
+<!-- SITEMAP -->
+					<div id="infocolumns" class="borderbottom"> <!-- Info columns & because I don't like lists -->
+						<div> <!-- Column 1 - Sites -->
+							<h1>site</h1> <!-- Header -->
+							<p><a href="home.html">home</a> </p> <!-- Link to home page -->
+							<p><a href="products.html">products</a> </p> <!-- Link to products page -->
+							<p><a href="about.html">about</a> </p> <!-- Link to about page -->
+							<p><a href="contact.html">contact</a> </p> <!-- Link to contact page -->
+							<p><a href="news.html">news</a> </p> <!-- Link to news page -->
+						</div> <!-- Close column 1 -->
+						<div> <!-- Column 2 - Product Categories -->
+							<h1>products</h1> <!-- Header -->
+							<p><a href="surfing">surfing</a> </p> <!-- Link to surfing products -->
+							<p><a href="clothing">clothing</a> </p> <!-- Link to clothing products -->
+							<p><a href="protection">protection</a> </p> <!-- Link to protective products -->
+							<p><a href="scubasnorkelinggear">scuba/snorkeling gear</a> </p> <!-- Link to scuba and snorkeling gear -->
+							<p><a href="recreation">recreation</a> </p> <!-- Link to recreational gear -->
+							<p><a href="accessories">accessories</a> </p> <!-- Link to accessories -->
+						</div> <!-- Close column 2 -->
+						<div> <!-- Column 3 - Contact details -->
+							<h1>contact</h1> <!-- Header -->
+							<p>email: contact@brokenhillsurf.com.au</p> <!-- Email address - nonexistent -->
+							<p>facebook: brokenhillsurfshop</p> <!-- Facebook page name - nonexistent -->
+							<p>twitter: @brokenhillsurfshop</p> <!-- Twitter handle - nonexistent -->
+						</div> <!-- Close column 3 -->
+					</div> <!-- Close info columns -->
+				</div> <!-- Close footer -->
+				<p>&copy; 2014 Andrew Wong & Ryan Oo</p> <!-- Copyright -->
+			</div> <!-- Close footer wrapper -->
+		</div> <!-- Close wrapper div -->
+	</body> <!-- Close BODY tag -->
+</html> <!-- Close HTML tag -->
