// Getting tired of commenting, and like, uhm, mum wants me to get off.

--- a/site/404.html
+++ b/site/404.html
@@ -46,8 +46,8 @@
       <div id="four_oh_four_content"> <!-- Body wrapper (The actual content) -->
         <div id="four_oh_four" class="four_oh_four"> <!-- 404 images and styles for the contents -->
           <hr /> <!-- Draw a horizontal rule -->
-          <p><a href="home.html">Return to the homepage</a> </p> <!-- Link to home page -->
-          <script type="text/javascript">if (document.referrer != "") document.write('<a href="javascript:history.back()">Click here to go back</a>');</script> <!-- [JavaScript] If the document was referred to from another page, show the "Go Back" link -->
+          <p><a href="home.html">Click here to return to the homepage</a> </p> <!-- Link to home page -->
+          <script type="text/javascript">if (document.referrer != "") document.write('<a href="javascript:history.back()">Or click here to go back</a>');</script> <!-- [JavaScript] If the document was referred to from another page, show the "Go Back" link -->
         </div> <!-- Close 404 image and content -->
       </div> <!-- Close body wrapper -->
       <div id="footer_wrapper" class="footergradient nomargin"> <!-- Footer wrapper (Whole page width) -->
